--- a/private/src/blocks/_deprecated/collapsable/style.scss
+++ b/private/src/blocks/_deprecated/collapsable/style.scss
@@ -12,6 +12,7 @@
 }
 
 .wp-block-amnesty-core-collapsable figcaption {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -34,6 +35,8 @@
 }
 
 .wp-block-amnesty-core-collapsable .btn--blank {
+  position: absolute;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
